--- a/src/app/index.css
+++ b/src/app/index.css
@@ -45,9 +45,16 @@ a:hover {
     filter: brightness(1.2);
 }
 
-body {
+html,
+body,
+#root {
     margin: 0;
-    min-height: 100vh;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+}
+
+body {
     background-color: var(--c-bg);
     color: var(--c-text);
     user-select: auto;
